# PhiZone-Player-Construct

./: .gitignore  .prettierignore  .prettierrc  README.md  capacitor.config.ts  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  publish-debug.yml  publish-release.yml
android/app/: .gitignore  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/cn/phizone/player/: MainActivity.java
android/app/src/main/res/values/: strings.xml
ios/App/: Podfile
ios/App/App/: App.entitlements  Info.plist
ios/App/App.xcodeproj/: project.pbxproj
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/lib/: index.ts
src/lib/components/: Distribution.svelte  Preferences.svelte
src/player/: Player.svelte  constants.ts  ffmpeg.ts  main.ts  types.ts  utils.ts
src/player/handlers/: JudgmentHandler.ts  KeyboardHandler.ts  PointerHandler.ts  SignalHandler.ts  StatisticsHandler.ts
src/player/objects/: EndingUI.ts  GameUI.ts  HitEffects.ts  Line.ts  LongNote.ts  PlainNote.ts  ShaderPipeline.ts  Video.ts
src/player/scenes/: Game.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/(app)/: +layout.svelte  +page.svelte
src/routes/(app)/app/: +page.svelte
src/routes/play/: +page.svelte
static/.well-known/: apple-app-site-association  assetlinks.json
static/game/fonts/Outfit/: Outfit.fnt
vite/: config.dev.mjs  config.prod.mjs
